k8s-security-framework/policies/pod-security/KSP-POD-005/tests/boundary-pass-additional-edge-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-005-boundary-unset-additional-boundary-pass
  namespace: policy-test
spec:
  containers:
  - name: demo-api
    image: harbor.example.com/demo-api:1.0.0
