k8s-security-framework/policies/pod-security/KSP-POD-005/tests/negative-host-pid-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-005-negative
  namespace: policy-test
spec:
  hostPID: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
