k8s-security-framework/policies/pod-security/KSP-POD-005/tests/negative-hostpid-true-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ksp-pod-005-negative-true-two
  namespace: policy-test
spec:
  hostPID: true
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
