k8s-security-framework/policies/pod-security/KSP-POD-005/tests/positive-hostpid-false-with-two-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-005-positive-false-two
  namespace: policy-test
spec:
  hostPID: false
  containers:
    - name: demo-api
      image: harbor.example.com/demo-api:1.0.0
    - name: sidecar
      image: harbor.example.com/demo-api:1.0.0
